[package]
name = "py-spy"
version = "0.3.10"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/py-spy"
homepage = "https://github.com/benfred/py-spy"
description = "Sampling profiler for Python programs "
readme = "README.md"
exclude = ["images/*", "test_programs/*"]
license = "MIT"
build="build.rs"
edition="2018"

[lib]
crate-type = ["staticlib", "dylib", "rlib"]

[dependencies]
clap = {version="2", features=["wrap_help"]}
env_logger = "0.9"
failure = "0.1.8"
goblin = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.80"
log = "0.4"
lru = "0.6"
regex = "1"
proc-maps = "0.1.9"
memmap = "0.7.0"
cpp_demangle = "0.3"
rand = "0.8"
rand_distr = "0.4"
remoteprocess = {version="0.4.4", features=["unwind"]}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}
